--- a/KGCA41/TKGCATool/TKGCATool.vcxproj.filters
+++ b/KGCA41/TKGCATool/TKGCATool.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClInclude Include="TCameraMap.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TDxRT.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp">
@@ -180,6 +183,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="TCameraMap.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TDxRT.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Shadow.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
