--- a/KGCA41/TKGCATool/TKGCATool.vcxproj
+++ b/KGCA41/TKGCATool/TKGCATool.vcxproj
@@ -278,6 +278,11 @@
     <Text Include="SpriteInfo.txt" />
     <Text Include="ui.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TGameCore\TGameCore.vcxproj">
+      <Project>{665e0ce5-e135-453e-8a17-2a9b66bb933d}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
