--- a/KGCA41/TKGCATool/TKGCATool.vcxproj.filters
+++ b/KGCA41/TKGCATool/TKGCATool.vcxproj.filters
@@ -219,6 +219,9 @@
     <ClInclude Include="TWorldObject.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TLog.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp">
@@ -408,6 +411,9 @@
       <Filter>Core</Filter>
     </ClCompile>
     <ClCompile Include="TWorldObject.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TLog.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
