--- a/KGCA41/DrawFBX/DrawFBX.vcxproj
+++ b/KGCA41/DrawFBX/DrawFBX.vcxproj
@@ -157,10 +157,12 @@
   <ItemGroup>
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Sample.cpp" />
+    <ClCompile Include="TRunnable.cpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sample.h" />
+    <ClInclude Include="TRunnable.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
