--- a/KGCA41/Sample004/Sample004.vcxproj
+++ b/KGCA41/Sample004/Sample004.vcxproj
@@ -142,11 +142,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp" />
+    <ClCompile Include="TFileIO.cpp" />
     <ClCompile Include="TLinkedlist.cpp" />
     <ClCompile Include="TStudent.cpp" />
     <ClCompile Include="TStudentManager.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="TFileIO.h" />
     <ClInclude Include="TLinkedlist.h" />
     <ClInclude Include="TStudent.h" />
     <ClInclude Include="TStudentManager.h" />
