--- a/KGCA41/TDemoGameSvrLib_1/TBasisGS_1.vcxproj
+++ b/KGCA41/TDemoGameSvrLib_1/TBasisGS_1.vcxproj
@@ -217,6 +217,9 @@ copy "*.h" "..\\..\\TBasisGS_1\\inc"
   <ItemGroup>
     <Text Include="ReadMe.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
