--- a/KGCA41/Sample005/Sample005.vcxproj
+++ b/KGCA41/Sample005/Sample005.vcxproj
@@ -155,6 +155,12 @@
     <ClInclude Include="TStudent.h" />
     <ClInclude Include="TStudentManager.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="uml.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
