--- a/KGCA41/Octree_1/Octree_1.vcxproj
+++ b/KGCA41/Octree_1/Octree_1.vcxproj
@@ -142,7 +142,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Sample.cpp" />
+    <ClCompile Include="Demo.cpp" />
     <ClCompile Include="TNode.cpp" />
     <ClCompile Include="TObject.cpp" />
     <ClCompile Include="TOctreeCreate.cpp" />
