--- a/KGCA41/Octree_3/Octree_3.vcxproj
+++ b/KGCA41/Octree_3/Octree_3.vcxproj
@@ -166,6 +166,9 @@
     <ClInclude Include="TTimer.h" />
     <ClInclude Include="TUtils.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
