--- a/KGCA41/FirstWindow/FirstWindow.vcxproj.filters
+++ b/KGCA41/FirstWindow/FirstWindow.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Sample.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="TWindow.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="TWindow.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
