--- a/KGCA41/FirstWindow/FirstWindow.vcxproj
+++ b/KGCA41/FirstWindow/FirstWindow.vcxproj
@@ -142,9 +142,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Sample.cpp" />
+    <ClCompile Include="TCore.cpp" />
     <ClCompile Include="TWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Sample.h" />
+    <ClInclude Include="TCore.h" />
+    <ClInclude Include="TStd.h" />
     <ClInclude Include="TWindow.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
